style.css
body {
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    margin: 0;
}
/*HEADER STYLING*/
.header {
    display: flex;
    background-color: #1F2937;
    color: white;
    flex: 1;
    justify-content: center;
    gap: 400px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 1000;
}

.header ul {
    list-style: none;
    display: flex;
    gap: 25px;
    padding: 10px;
}

.header a {
    text-decoration: none;
    color: white;
}

/*SECTION ONE STYLING*/
.section-one {
    background-color:#1F2937;
    color: white;
    display: flex;
    justify-content: center;
    gap: 50px;
    padding-bottom: 100px;
    padding-top: 50px;
}

.stack-one {
    display: flex;
    flex-flow: column wrap;
    max-width: 450px;
}

.section-one h1 {
    font-size: 48px;
    font-weight: bold;
    padding: 0px;
    margin: 0px;
}

.section-one p {
    font-size: 18px;
    color: #E5E7EB;
    margin: 0px;

}

.section-one img {
    width: 450px;
    height: 225px;

}

.section-one button {
    display: flex;
    justify-content: center;
    background: #3882F6;
    border-radius: 8px;
    border: none;
    max-width: 100px;
    font-size: 16px;
    padding: 5px 20px;
    color:#F9FAF8;
    font-weight: bold;
    margin-top: 10px;
}

/*SECTION TWO STYLING*/ 

.section-two {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.section-two h1 {
    display: flex;
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    margin: 50px 0px;
}

.section-two .images .card img {
    width: 150px;
    height: 150px;
    border-radius: 20px;
    border: solid #3882F6;
    margin: 0px;
}

.section-two .images {
    display:flex;
    gap: 100px;
    align-items: center;
    justify-content: center;
}

.card {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    width: 100px;
    text-align: center;
}

.card p {
    color: #4b4d50;
    width: 200px;
    font-size: 18px;
    margin-bottom: 150px;
}

/*SECTION THREE STYLING*/

.section-three {
    display: flex;
    background-color: #E5E7EB;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.quote {
    font-size: 36px;
    color: #1F2937;
    font-weight: lighter;
    font-style: italic;
    width: 800px;
    margin-top: 200px;
}

.attribution {
    margin-top: 0px;
    font-size: 24px;
    margin-bottom: 150px;
    margin-left: 700px;
}

